fix: include tiktoken WASM files in Vercel serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "framework": "nextjs",
+  "functions": {
+    "app/api/**": {
+      "includeFiles": "node_modules/tiktoken/**"
+    }
+  },
   "headers": [
     {
       "source": "/api/(.*)",
