chore: rebrand to LegendAI and add comprehensive project documentation
BREAKING CHANGES:
- Project renamed from SRT-PT-AI to LegendAI
- New repository URL: https://github.com/TiagoStryke/LegendAI
- New production URL: https://uselegendai.vercel.app
- Package name updated to 'legendai'
- Version bumped to 0.2.0

Added Documentation:
- ROADMAP.md: Complete feature roadmap with 7 phases
- CHANGELOG.md: Retroactive changelog from project start
- REFACTORING-PLAN.md: Detailed code organization plan
- DEPENDENCIES-UPDATE-PLAN.md: Strategy for updating dependencies
- EXECUTIVE-SUMMARY.md: Executive summary and priorities

Features Planned:
- Multi-format subtitle support (SRT, VTT, ASS, SSA, SUB, SBV)
- TMDb API integration for better context
- Proactive rate limiting (Gemini + TMDb)
- Multi-language support (UI + translation)
- Batch file processing
- File System Access API for smart downloads
- Monetization strategy (freemium model)
- Mobile and desktop apps

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "srt-pt-ai",
-  "version": "0.1.0",
+  "name": "legendai",
+  "version": "0.2.0",
   "private": true,
+  "homepage": "https://uselegendai.vercel.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TiagoStryke/LegendAI"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
