fix: atualizar para gemini-2.5-flash e corrigir estrutura de mensagens
PROBLEMA:
- gemini-1.5-flash nao disponivel/funcional na API 2026
- Estrutura de mensagens incorreta (role system nao suportado)
- Todas as traducoes falhavam desde fim de 2025

SOLUCAO:
- Modelo: gemini-1.5-flash -> gemini-2.5-flash (estavel 2026)
- Mensagens consolidadas: instrucoes system no prompt user
- SDK: @ai-sdk/google 1.0.12 -> 3.0.29, ai 4.0.22 -> 6.0.86

VALIDACAO:
- Script de teste: scripts/test/test-translation.js
- Dexter S01E08: 597/597 legendas traduzidas perfeitamente
- Timings preservados, traducoes fieis, formatacao correta

--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.0.12",
-    "ai": "^4.0.22",
+    "@ai-sdk/google": "^3.0.29",
+    "ai": "^6.0.86",
     "eventsource-parser": "^1.1.1",
     "humanloop": "^0.5.36",
     "next": "14.0.4",
     "openai": "^4.77.0",
     "react": "^18",
     "react-dom": "^18",
-    "tiktoken": "^1.0.12"
+    "tiktoken": "^1.0.12",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
